--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paint</title>
-    <link rel="stylesheet" href="../Paint Project 2/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
@@ -38,17 +38,13 @@
               </li>
 
               <li class="dropdown">
-                <a href="" class="dropbtn">Color Selection</a>
-                <div class="dropdown-content">
-                  <a href="" onclick="">here</a>
-                </div>
+                <a href="" class="dropbtn" onclick="">Color Selection</a>
+                <div class="dropdown-content"></div>            
               </li>
 
               <li class="dropdown">
-                <a href="" class="dropbtn">Download Image</a>
-                <div class="dropdown-content">
-                  <a href="" onclick="">here</a>
-                </div>
+                <a href="" class="dropbtn" onclick="">Download Image</a>
+                <div class="dropdown-content"></div>   
               </li>
 
               <li class="dropdown">
