--- a/homepage.html
+++ b/homepage.html
@@ -1,4 +1,3 @@
-
 <script src="sketch.js"></script>
 <script>
   function Alertfunction() {
@@ -7,7 +6,7 @@
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
-
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,34 +25,33 @@
             <li class="dropdown">
               <a class="dropbtn">Tools</a>
               <div class="dropdown-content">
-                <a onclick="">Brush</a>
-                <a onclick="activateEraser()">Eraser</a>
+                <a onclick="activateTool('brush')">Brush</a>
+                <a onclick="activateTool('eraser')">Eraser</a>
               </div>
             </li>
 
             <li class="dropdown">
                 <a class="dropbtn">Shapes</a>
                 <div class="dropdown-content">
-                  <a onclick="activateEllipse()">Circle</a>
-                  <a onclick="activateRect()">Rectangle</a>
+                     <a onclick="activateTool('rect')">Rectangle</a>
+                     <a onclick="activateTool('ellipse')">Circle</a>
+               
                 </div>
               </li>
 
-              <li class="dropdown">
+              <li class="dropdown" id = "brushSizeDropdown">
                 <a class="dropbtn" onclick="">Brush Size</a>
                 <div class="dropdown-content"></div>   
               </li>
 
-              <li class="dropdown">
-                <a class="dropbtn">Colors</a>
-                <div class="dropdown-content">
-                  <a onclick="addToPalette()">Palette</a>
-                </div>
-              </li>
 
-              <li class="dropdown">
-                <a class="dropbtn" onclick="">Color Selection</a>
-                <div class="dropdown-content"></div>            
+              <li class="dropdown" >
+                <a class="dropbtn" id = "colorSelectionDropdown">Color Selection</a>
+                <div class="dropdown-content">
+
+                    
+
+                </div>           
               </li>
 
               <li class="dropdown">
@@ -62,7 +60,7 @@
               </li>
 
               <li class="dropdown">
-                <a class="dropbtn" onclick="clearCanvas()">Clear Screen</a>
+                <a class="dropbtn" onclick="clearCanvas()">Clear All</a>
                 <div class="dropdown-content"></div>   
               </li>
 
